--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-body {
+/*body {
   text-align: center;
   font-family: courier;
   background-image: url("../assets/image.jpeg");
@@ -19,6 +19,179 @@ body {
 
 .my_social a img {
   height: 1.5em;
+}
+
+* {
+  box-sizing: border-box;
+  position: relative;
+  padding: 0px;
+  margin: 0px;
+}
+
+body {
+  background: #333;
+  font-family: 'Raleway', sans-serif;
+  color: #fff;
+}
+
+.container {
+  position: relative;
+  margin: auto;
+  margin-top: 5%;
+  width: 840px;
+  height: 840px;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+.letter {
+  height: 90px;
+  width: 90px;
+  border-radius: 50%;
+  line-height: 90px;
+  text-align: center;
+  margin: 5px;
+  font-size: 32px;
+  font-weight: bold;
+}
+
+.code {
+  width: 90px;
+  height: 12px;
+  font-size: 13px;
+  text-align: center;
+  margin: 5px;
+}
+
+article {
+  margin: 50px 0 15px 0;
+  line-height: 1.5em;
+  text-align: center;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  border-radius: 5px;
+  margin-bottom: 25px;
+}
+
+tr > td {
+  border: 2px solid #fff;
+}
+
+td {
+  padding: 5px;
+  white-space: nowrap;
+}
+
+.header {
+  width: 175px;
+  background: #fff;
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+  color: #333;
+  padding: 5px;
+  border: 2px solid #fff;
+}
+
+.color-0 {
+  background-color: #00d5ff;
+}
+
+.color-1 {
+  background-color: #00abff;
+}
+
+.color-2 {
+  background-color: #0080ff;
+}
+
+.color-3 {
+  background-color: #0056ff;
+}
+
+.color-4 {
+  background-color: #002bff;
+}
+
+.color-5 {
+  background-color: #0001ff;
+}
+
+.color-6 {
+  background-color: #2a00ff;
+}
+
+.color-7 {
+  background-color: #5500ff;
+}
+
+.color-8 {
+  background-color: #7f00ff;
+}
+
+.translateX {
+  -webkit-transform: translateX(45%);
+          transform: translateX(45%);
+}
+
+.translateY {
+  -webkit-transform: translateY(45%);
+          transform: translateY(45%);
+}
+
+.translateZ {
+  -webkit-transform: translateZ(45%);
+          transform: translateZ(45%);
+}
+
+.rotateX {
+  -webkit-transform: rotateX(45deg);
+          transform: rotateX(45deg);
+}
+
+.rotateY {
+  -webkit-transform: rotateY(45deg);
+          transform: rotateY(45deg);
+}
+
+.rotateZ {
+  -webkit-transform: rotateZ(45deg);
+          transform: rotateZ(45deg);
+}
+
+.skewX {
+  -webkit-transform: skewX(15deg);
+          transform: skewX(15deg);
+}
+
+.skewY {
+  -webkit-transform: skewY(45deg);
+          transform: skewY(45deg);
+}
+
+.skew {
+  -webkit-transform: skew(15deg, 45deg);
+          transform: skew(15deg, 45deg);
+}
+
+.scaleX {
+  -webkit-transform: scaleX(0.75);
+          transform: scaleX(0.75);
+}
+
+.scaleY {
+  -webkit-transform: scaleY(0.75);
+          transform: scaleY(0.75);
+}
+
+.scaleZ {
+  -webkit-transform: scaleZ(0.75);
+          transform: scaleZ(0.75);
 }
 
 .containers {
