--- a/css/styles.css
+++ b/css/styles.css
@@ -22,13 +22,11 @@ body {
   height: 2.5em;
 }
 
-/*.my_social a img {
+.my_social a img {
   height: 1.5em;
 }
 
-
-
-.container {
+/*.container {
   position: relative;
   margin: auto;
   margin-top: 5%;
