--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ body {
   height: 1.5em;
 }
 
-/*.container {
+.container {
   position: relative;
   margin: auto;
   margin-top: 5%;
@@ -34,7 +34,7 @@ body {
   height: 840px;
 }
 
-.row {
+/*.row {
   display: flex;
   flex-direction: row;
 }
