--- a/css/styles.css
+++ b/css/styles.css
@@ -34,12 +34,12 @@ body {
   height: 840px;
 }
 
-/*.row {
+.row {
   display: flex;
   flex-direction: row;
 }
 
-.letter {
+/*.letter {
   height: 90px;
   width: 90px;
   border-radius: 50%;
