--- a/css/styles.css
+++ b/css/styles.css
@@ -58,13 +58,13 @@ body {
   margin: 4px;
 }
 
-/*article {
+article {
   margin: 50px 0 15px 0;
   line-height: 1.5em;
   text-align: center;
 }
 
-table {
+/*table {
   width: 100%;
   border-collapse: collapse;
   border-radius: 5px;
