--- a/css/styles.css
+++ b/css/styles.css
@@ -131,12 +131,12 @@ td {
   transform: translateX(45%);
 }
 
-/*.translateY {
+.translateY {
   -webkit-transform: translateY(45%);
-          transform: translateY(45%);
+  transform: translateY(45%);
 }
 
-.translateZ {
+/*.translateZ {
   -webkit-transform: translateZ(45%);
           transform: translateZ(45%);
 }
