--- a/css/styles.css
+++ b/css/styles.css
@@ -156,12 +156,12 @@ td {
   transform: rotateZ(45deg);
 }
 
-/*.skewX {
+.skewX {
   -webkit-transform: skewX(15deg);
-          transform: skewX(15deg);
+  transform: skewX(15deg);
 }
 
-.skewY {
+/*.skewY {
   -webkit-transform: skewY(45deg);
           transform: skewY(45deg);
 }
