--- a/css/styles.css
+++ b/css/styles.css
@@ -186,12 +186,12 @@ td {
   transform: scaleZ(0.75);
 }
 
-/*.containers {
+.containers {
   width: 520px;
   margin: 20px auto;
 }
 
-#contact h1 {
+/*#contact h1 {
   font-family: helvetica;
   font-weight: normal;
   text-align: center;
