--- a/css/styles.css
+++ b/css/styles.css
@@ -191,7 +191,7 @@ td {
   margin: 20px auto;
 }
 
-/*#contact h1 {
+#contact h1 {
   font-family: helvetica;
   font-weight: normal;
   text-align: center;
@@ -203,7 +203,7 @@ td {
   border-bottom: 3px solid #f3f3f3;
 }
 
-.cal {
+/*.cal {
   display: inline-block;
   background: #ffe;
   color: #555;
