--- a/css/styles.css
+++ b/css/styles.css
@@ -233,11 +233,11 @@ td {
   color: #f00;
 }
 
-/*.cal th:last-child {
+.cal th:last-child {
   color: #04d;
 }
 
-.cal td {
+/*.cal td {
   padding: 0 2px;
   line-height: 100%;
 }
